--- a/src/Presentation/Presentation.csproj
+++ b/src/Presentation/Presentation.csproj
@@ -7,4 +7,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="WebApi\Endpoints\" />
+      <Folder Include="WebApi\Models\" />
+      <Folder Include="WebApi\Validators\" />
+    </ItemGroup>
+
 </Project>
