feat: add models/value objects/validators related to login

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -1,23 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="WebApi\Endpoints\" />
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="FluentValidation" />
-      <PackageReference Include="FluentValidation.Validators.UnitTestExtension" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Core\Core.csproj" />
+        <InternalsVisibleTo Include="UnitTests" />
     </ItemGroup>
 
 </Project>
