--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -9,5 +9,6 @@
     <PackageVersion Include="FluentValidation.Validators.UnitTestExtension" Version="1.11.0.2" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.7.24405.3" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.8" />
+    <PackageVersion Include="Moq" Version="4.20.70" />
   </ItemGroup>
 </Project>
