feat: create jwt token on login

--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -5,5 +5,13 @@
             "System": "Information",
             "Microsoft": "Information"
         }
+    },
+    "AppConfig": {
+        "JwtConfig": {
+            "Key": "7C629572955AE88978A0DEE2BDE85EC6",
+            "Issuer": "http://localhost:7123/",
+            "Audience": "http://localhost:7123/",
+            "Lifetime": 1440
+        }
     }
 }
