--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -8,6 +8,10 @@
 
     <ItemGroup>
       <PackageReference Include="FluentValidation" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" />
+      <PackageReference Include="Microsoft.Extensions.Options" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
     </ItemGroup>
 
     <ItemGroup>
