--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,12 +4,17 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="AutoFixture" Version="4.18.1" />
+    <PackageVersion Include="EmailValidation" Version="1.2.0" />
+    <PackageVersion Include="FastEndpoints" Version="5.28.0" />
+    <PackageVersion Include="FastEndpoints.Swagger" Version="5.28.0" />
     <PackageVersion Include="FluentAssertions" Version="6.12.0" />
     <PackageVersion Include="FluentValidation" Version="11.9.2" />
+    <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
     <PackageVersion Include="FluentValidation.Validators.UnitTestExtension" Version="1.11.0.2" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.8" />
     <PackageVersion Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageVersion Include="Microsoft.IdentityModel.Tokens" Version="8.0.1" />
     <PackageVersion Include="Moq" Version="4.20.70" />
     <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
