--- a/src/Presentation/Presentation.csproj
+++ b/src/Presentation/Presentation.csproj
@@ -9,8 +9,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FastEndpoints" />
+      <PackageReference Include="FastEndpoints.Swagger" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
       <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
       <PackageReference Include="Swashbuckle.AspNetCore" />
       <PackageReference Include="FluentValidation" />
       <PackageReference Include="FluentValidation.Validators.UnitTestExtension" />
@@ -21,4 +25,7 @@
       <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="UnitTests" />
+    </ItemGroup>
 </Project>
