feat: update auth to use salt instead of md5

--- a/src/Presentation/Presentation.csproj
+++ b/src/Presentation/Presentation.csproj
@@ -28,4 +28,8 @@
     <ItemGroup>
         <InternalsVisibleTo Include="UnitTests" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="WebApi\Endpoints\Test\" />
+    </ItemGroup>
 </Project>
