--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="EmailValidation" />
+      <PackageReference Include="FastEndpoints.Security" />
       <PackageReference Include="FluentValidation" />
       <PackageReference Include="Microsoft.Extensions.Configuration" />
       <PackageReference Include="Microsoft.Extensions.Options" />
