--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -13,5 +13,9 @@
             "Audience": "http://localhost:7123/",
             "Lifetime": 1440
         }
+    },
+    "ConnectionStrings": {
+        "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Movies;Integrated Security=True;Connect Timeout=30;Encrypt=False;",
+        "SQLiteDefault": "Data Source=data.db"
     }
 }
