feat: support refresh token

--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -5,5 +5,27 @@
             "System": "Information",
             "Microsoft": "Information"
         }
+    },
+    "AppConfig": {
+        "ServiceConfig": {
+            "BaseUrl": ""
+        },
+        "JwtConfig": {
+            "Key": "",
+            "Issuer": "",
+            "Audience": "",
+            "AccessTokenLifetimeInMinutes": 15,
+            "RefreshTokenLifetimeInMinutes": 43200
+        },
+        "SmtpConfig": {
+            "Host": "",
+            "Port": 0,
+            "EmailAddress": "",
+            "Name": "",
+            "Password": ""
+        }
+    },
+    "ConnectionStrings": {
+        "SQLiteDefault": "Data Source=data.db;foreign keys=true"
     }
 }
