--- a/tests/UnitTests/UnitTests.csproj
+++ b/tests/UnitTests/UnitTests.csproj
@@ -32,6 +32,7 @@
 
     <ItemGroup>
       <Folder Include="Tests\" />
+      <Folder Include="Tests\Presentation\WebApi\" />
     </ItemGroup>
 
 </Project>
