--- a/src/Presentation/Presentation.csproj
+++ b/src/Presentation/Presentation.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" />
       <PackageReference Include="FastEndpoints" />
       <PackageReference Include="FastEndpoints.Security" />
       <PackageReference Include="FastEndpoints.Swagger" />
