--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -8,7 +8,8 @@
     },
     "AppConfig": {
         "ServiceConfig": {
-            "BaseUrl": ""
+            "PasswordResetUrl": "",
+            "ServiceName": ""
         },
         "JwtConfig": {
             "Key": "",
