--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -27,6 +27,6 @@
         }
     },
     "ConnectionStrings": {
-        "SQLiteDefault": "Data Source=data.db;foreign keys=true"
+        "Database": ""
     }
 }
