feat: behaviour tests for register endpoint

--- a/src/Presentation/Presentation.csproj
+++ b/src/Presentation/Presentation.csproj
@@ -32,6 +32,7 @@
 
     <ItemGroup>
         <InternalsVisibleTo Include="UnitTests" />
+        <InternalsVisibleTo Include="BehaviouralTests" />
     </ItemGroup>
 
 </Project>
