--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,3 +15,4 @@ services:
       - '35433:5432'
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+      - ./src/Infrastructure/Scripts/Migration.sql:/docker-entrypoint-initdb.d/init.sql
