feat: add change password behaviour tests

--- a/tests/UnitTests/UnitTests.csproj
+++ b/tests/UnitTests/UnitTests.csproj
@@ -29,4 +29,8 @@
       <ProjectReference Include="..\..\src\Presentation\Presentation.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="BehaviouralTests" />
+    </ItemGroup>
+
 </Project>
