feat: add password reset token expiry

--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -8,7 +8,6 @@
     },
     "AppConfig": {
         "ServiceConfig": {
-            "PasswordResetUrl": "",
             "ServiceName": ""
         },
         "JwtConfig": {
@@ -24,6 +23,11 @@
             "EmailAddress": "",
             "Name": "",
             "Password": ""
+        },
+        "PasswordResetConfig": {
+            "PasswordResetUrl": "",
+            "PasswordResetTokenLifetimeInMinutes": 1440,
+            "NumberOfEmailRetries": 5
         }
     },
     "ConnectionStrings": {
