feat: add email outbox

--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -22,12 +22,12 @@
             "Port": 0,
             "EmailAddress": "",
             "Name": "",
-            "Password": ""
+            "Password": "",
+            "NumberOfRetries": 5
         },
         "PasswordResetConfig": {
             "PasswordResetUrl": "",
-            "PasswordResetTokenLifetimeInMinutes": 1440,
-            "NumberOfEmailRetries": 5
+            "PasswordResetTokenLifetimeInMinutes": 1440
         }
     },
     "ConnectionStrings": {
