feat: allow search by user role

--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -11,7 +11,8 @@
             "EmailOutboxIntervalInMs": ""
         },
         "ServiceConfig": {
-            "ServiceName": ""
+            "ServiceName": "",
+            "Environment": ""
         },
         "JwtConfig": {
             "Key": "",
