--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -7,6 +7,9 @@
         }
     },
     "AppConfig": {
+        "AuthenticationConfig": {
+            "OneTimePasscodeLifetimeInMinutes": ""
+        },
         "BackgroundServiceConfig": {
             "EmailOutboxIntervalInMs": ""
         },
