--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Start dependencies (docker-compose)
-        run: docker-compose up -d  
+        run: docker compose up -d  
 
       - name: Wait for SQL Server container
         uses: jakejarvis/wait-action@master
