--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: user_management
         volumes:
-          - ../../src/Infrastructure/Scripts/Migration.sql:/docker-entrypoint-initdb.d/init.sql
+          - src/Infrastructure/Scripts/Migration.sql:/docker-entrypoint-initdb.d/init.sql
 
       smtp:
         image: reachfive/fake-smtp-server
