--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,11 +15,6 @@ jobs:
     services:
       postgres:
         image: postgres:15.4-bullseye
-        options: >-
-          --health-cmd="pg_isready"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
         ports:
           - 35433:5432
         env:
@@ -27,7 +22,7 @@ jobs:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: user_management
         volumes:
-          - "/($pwd)/src/Infrastructure/Scripts/Migration.sql:/docker-entrypoint-initdb.d/init.sql"
+          - "${GITHUB_WORKSPACE}/src/Infrastructure/Scripts/Migration.sql:/docker-entrypoint-initdb.d/init.sql"
 
       smtp:
         image: reachfive/fake-smtp-server
