--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,7 +22,7 @@ jobs:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: user_management
         volumes:
-          - "${GITHUB_WORKSPACE}/src/Infrastructure/Scripts/Migration.sql:/docker-entrypoint-initdb.d/init.sql"
+          - "/($pwd)/src/Infrastructure/Scripts/Migration.sql:/docker-entrypoint-initdb.d/init.sql"
 
       smtp:
         image: reachfive/fake-smtp-server
