fix: set env to testing

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,6 +47,8 @@ jobs:
 
     - name: Run tests
       run: dotnet test --no-build --configuration Release --logger:"trx;LogFileName=test_results.trx"
+      env:
+        ASPNETCORE_ENVIRONMENT: Testing
 
     - name: Publish Test Results
       if: always()
