--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
     - name: Check migration pat
       run: psql -f Migration.sql postgresql://postgres:postgres@localhost:35433/user_management
-      working-directory: ./src/Infrastructure/Scripts
+      working-directory: src/Infrastructure/Scripts
 
     - name: Checkout code
       uses: actions/checkout@v3
