--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,7 +34,7 @@ jobs:
 
     steps:
     - name: Run Migrations
-      run: cat docker-compose.yaml
+      run: find ./ -name Migration.sql
       # psql -f Migration.sql postgresql://postgres:postgres@localhost:35433/user_management
 
     - name: Checkout code
