--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,7 +36,7 @@ jobs:
     steps:
     - name: Run Migrations
       run: |
-        pg_isready
+        pg_isready -p 35433
         psql -f $(find ./ -name Migration.sql) -U postgres -W postgres -p 35433 -d user_management -a
 
     - name: Checkout code
