--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,8 +24,6 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-        ports:
-          - 35433:5432
 
       smtp:
         image: reachfive/fake-smtp-server
@@ -36,8 +34,8 @@ jobs:
     steps:
     - name: Run Migrations
       run: |
-        pg_isready -p 35433
-        psql -f $(find ./ -name Migration.sql) -U postgres -W postgres -p 35433 -d user_management -a
+        pg_isready
+        psql -f $(find ./ -name Migration.sql) -U postgres -W postgres -d user_management -a
 
     - name: Checkout code
       uses: actions/checkout@v3
