--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,9 +34,15 @@ jobs:
           - 1080:1080
 
     steps:
+    - name: Print PWD
+      run: ls 
+      working-directory: src
+      env:
+        PGPASSWORD: postgres
+
     - name: Import DB Seed Data
       run: psql -d postgresql://postgres@localhost/user_management -f Migration.sql
-      working-directory: ./src/Infrastructure/Scripts
+      working-directory: src/Infrastructure/Scripts
       env:
         PGPASSWORD: postgres
 
