--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -53,10 +53,10 @@ jobs:
       run: dotnet restore
 
     - name: Build the solution
-      run: dotnet build --no-restore --configuration Release
+      run: dotnet build --no-restore --configuration Debug
 
     - name: Run tests
-      run: dotnet test --no-build --configuration Release --logger:"trx;LogFileName=test_results.trx"
+      run: dotnet test --no-build --configuration Debug --logger:"trx;LogFileName=test_results.trx"
 
     - name: Publish Test Results
       if: always()
