--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  run-tests:
+  build:
     runs-on: ubuntu-latest
 
     services:
@@ -55,9 +55,13 @@ jobs:
     - name: Build the solution
       run: dotnet build --no-restore --configuration Debug
 
+  unit-tests:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
     - name: Run Unit Tests
       run: dotnet test tests/UnitTests --no-build --configuration Debug --logger:"trx;LogFileName=unit_tests.trx"
-
+  
     - name: Run Behavioural Tests
       run: dotnet test tests/BehaviouralTests --no-build --configuration Debug --logger:"trx;LogFileName=behavioural_tests.trx"
 
@@ -67,3 +71,17 @@ jobs:
       with:
         name: test-results
         path: '**/*.trx'
+
+  behavioural-tests:
+      runs-on: ubuntu-latest
+      needs: build
+      steps:
+      - name: Run Behavioural Tests
+        run: dotnet test tests/BehaviouralTests --no-build --configuration Debug --logger:"trx;LogFileName=behavioural_tests.trx"
+  
+      - name: Publish Test Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: '**/*.trx'
