--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -11,6 +11,7 @@
             "OneTimePasscodeLifetimeInMinutes": ""
         },
         "BackgroundServiceConfig": {
+            "EmailOutboxEnabled": "",
             "EmailOutboxIntervalInMs": ""
         },
         "ServiceConfig": {
